# NIDB

./: CMakeLists.txt  README.md  README_CN.md  main.cpp
.github/workflows/: cmake-multi-platform.yml  release.yml
